fix: method and test improvements